# invenio-indexer

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: tests.yml
.tx/: config
docs/: api.rst  conf.py  configuration.rst  examplesapp.rst  index.rst  requirements.txt  usage.rst
examples/: README.rst  app-fixtures.sh  app-recreate.sh  app.py
examples/data/testrecords/: testrecord-v1.0.0.json
examples/files/: html.html  text-iso-2022-jp.txt  text-iso-8859-1.txt  text-iso-8859-6.txt  text-utf8.txt
invenio_indexer/: __init__.py  api.py  cli.py  config.py  ext.py  proxies.py  registry.py  signals.py  tasks.py  utils.py  version.py
tests/: conftest.py  test_api.py  test_cli.py  test_examples_app.py  test_invenio_bulkindexer.py  test_invenio_indexer.py  test_registry.py  test_tasks.py  test_utils.py
tests/data/: __init__.py
tests/data/os-v1/: __init__.py
tests/data/v2/: __init__.py
tests/data/v5/: __init__.py
tests/data/v7/: __init__.py
tests/demo/: __init__.py  json_resolver.py
